
#+begin_src org
,#+roam_alias: "An alias with spaces"
#+end_src

, it should now be specified as

#+begin_src org
,#+alias: An alias with spaces
#+end_src

. This also puts it more inline with =#+title=.

In Markdown, use the =alias= prop with a JSON list.

#+begin_src markdown
---
alias: ["An alias with spaces", "Another alias"]
---
#+end_src

*** =#+roam_key= can now be a plain string, which is interpreted as a cite ref

Previously, to associate a note with a bibtex key, one would put:

#+begin_src org
,#+roam_key: cite:miman2017
#+end_src

in it. Now it can be written as

#+begin_src org
,#+roam_key: miman2017
#+end_src

.

*** Tags are also read from the =#+tags[]= property

This key is used by Hugo.

*** When creating links, =org-link-abbrev-alist= will first be applied ([[https://github.com/kisaragi-hiu/org-roam/commit/15fecc6da54edc4d0f58458b81d0ef7132033f8c][15fecc6]])

For example, I map ="notes"= to point to =/home/kisaragi/notes/=. If a link is created for =/home/kisaragi/notes/hello.org=, it will be created as =notes:hello.org= in Org mode.

As Markdown has no equivalent, a relatively link will still be created.

*** Annotations via Marginalia

File paths and notes completion now have additional information attached (including their category), which can be shown if Marginalia is installed.

*** New “Command palette” system

Currently, two palettes are provided: =kisaragi-notes/command-palette=, which provides a list of global commands, and =kisaragi-notes/literature-note-actions=, which provides note-local commands for literature notes.

*** Replace =org-roam-dailies= with my own diary system =kisaragi-diary= ([[https://github.com/kisaragi-hiu/org-roam/commit/a6021db958f4a3c449a7fd1564e0b0c2b78cfda4][a6021db]], [[https://github.com/kisaragi-hiu/org-roam/commit/011b6087626471b0b4e46dfd3e5b7305166e0b3b][011b608]], [[https://github.com/kisaragi-hiu/org-roam/commit/9b744249ba292e9b8b1ad696e96c471859231681][9b74424]])
