@@ -1,3 +1,3 @@
-#+roam_key: https://www.orgroam.com/
-#+roam_key: cite:orgroam2020
-#+roam_key: plain-key
+#+key: https://www.orgroam.com/
+#+key: cite:orgroam2020
+#+key: plain-key
