@@ -1,1 +1,1 @@
-#+roam_key: https://google.com/
+#+key: https://google.com/
